--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,10 +2,17 @@
 
 UNRELEASED:
 
+Version: 4.31.0, Date: 2021-03-31
+- Updated Translations
+- Fixed and improved the hiding wizard
+- Fixed an issue with the YT Manage Subscription page
+- Fixed an issue with YT Channel allowlisting feature interfering with snippets
+- Updated the FanBoy Annoyances filter list URL
+
 Version: 4.30.0, Date: 2021-03-17
 - Updated Translations
 - For AdBlock Premium users, we've added the ability to delete any synchronized devices
-- For AdBlock Premium users, we've improvide the performance of the image swap feature
+- For AdBlock Premium users, we've improved the performance of the image swap feature
 - Fixed an issue with new the Gulp build process
 - Enhanced the ability of AdBlock to be tested via automation
 
