--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -442,7 +442,7 @@
     "description": "A filter list. \"Adblock\" is written with a lowercase B in this string as it refers to ad blocking extensions in general, not just AdBlock specifically."
   },
   "filteracceptable_ads": {
-    "message": "Annehmbare Werbung",
+    "message": "Akzeptable Werbung",
     "description": "A filter list"
   },
   "filteradblock_custom": {
@@ -488,10 +488,6 @@
   "filter_easylist_plus_indonesian": {
     "message": "Indonesisch + EasyList",
     "description": "A filter list combined with EasyList"
-  },
-  "filtermalware": {
-    "message": "Malware-Schutz",
-    "description": "A filter list"
   },
   "filterbitcoin_mining_protection": {
     "message": "Cryptowährung-Mining-Schutzliste (Bitcoin)",
@@ -605,48 +601,20 @@
     "message": "Das Melden von Werbung ist freiwillig. Es hilft anderen Menschen, da die Betreuer der Filterlisten die Werbung für alle blockieren können. Wenn Sie jetzt nicht altruistisch handeln möchten, ist das in Ordnung. Schließen Sie diese Seite und [[blockieren Sie die Werbung]] nur für sich selbst.",
     "description": "Introduction of the ad reporting page"
   },
-  "malwarenotificationcheckboxmessage": {
-    "message": "Möchten Sie von AdBlock benachrichtigt werden, wenn Malware erkannt wird?",
-    "description": "Checkbox displayed when subscribing to the 'Malware protection' filter list on the Filter lists tab of the Options page"
-  },
-  "malwarenotificationmessage": {
-    "message": "AdBlock hat einen Download von einer Site blockiert, auf der Malware gefunden wurde.",
-    "description": "Notification when a potential malware request has been blocked. This message should be under 90 characters!"
-  },
-  "malwarenotificationlearnmore": {
-    "message": "Mehr über Malware erfahren",
-    "description": "Button on the malware notification that opens a page about malware on the AdBlock website. Message should be under 45 characters!"
-  },
-  "malwarenotificationdisablethesemessages": {
-    "message": "Diese Meldungen deaktivieren",
-    "description": "Button on the malware notification to disable future notifications. Message should be under 45 characters!"
-  },
-  "malwarecheck": {
-    "message": "Auf Malware prüfen, die Werbung einspeisen könnte:",
-    "description": "Section header on the ad report page"
-  },
-  "malwarewarning": {
-    "message": "Ihr Computer könnte mit Malware infiziert sein. Klicken Sie [[hier]] für weitere Informationen.",
-    "description": "On the ad report page, the ads the user is seeing might be caused by malware/adware"
-  },
-  "malwarenotfound": {
-    "message": "Keine bekannte Malware gefunden.",
-    "description": "On the ad report page, the ads the user is seeing are probably not caused by malware/adware"
-  },
   "disableaa": {
-    "message": "Prüfen Sie die Filter der Annehmbaren Werbung:",
+    "message": "Prüfen Sie die Filter der Akzeptablen Werbung:",
     "description": "Section header on the ad report page"
   },
   "clickdisableaa": {
-    "message": "Klicken Sie auf: [[Annehmbare Werbung deaktivieren]]",
+    "message": "Klicken Sie auf: [[Akzeptable Werbung deaktivieren]]",
     "description": "Instruction on ad report page"
   },
   "aamessageadreport": {
-    "message": "Wenn Sie lieber keine Werbung wie diese sehen möchten, können Sie die Filterliste der Annehmbaren Werbung deaktiviert lassen.",
+    "message": "Wenn Sie lieber keine Werbung wie diese sehen möchten, können Sie die Filterliste der Akzeptablen Werbung deaktiviert lassen.",
     "description": "Acceptable Ads message on ad report page"
   },
   "aalinkadreport": {
-    "message": "Erfahren Sie mehr über das Programm der Annehmbaren Werbung.",
+    "message": "Erfahren Sie mehr über das Programm der Akzeptablen Werbung.",
     "description": "Acceptable Ads link message on ad report page"
   },
   "adreportthanks": {
@@ -1038,7 +1006,7 @@
     "description": "A filter list"
   },
   "other": {
-    "message": "Andere",
+    "message": "Anderer Grund",
     "description": "Multiple choice option"
   },
   "nodefaultfilter1": {
@@ -1400,7 +1368,7 @@
     "description": "This message will be followed by a list of names of the translators who contributed to the language AdBlock is currently displayed in. Do not add any names to this string."
   },
   "tabsupport": {
-    "message": "Kundendienst",
+    "message": "Support",
     "description": "A tab on the Options page"
   },
   "tabtranslations": {
@@ -1764,7 +1732,7 @@
     "description": "Resource list page: column title telling if the resource originates from a different domain"
   },
   "acceptableadsdisable_done": {
-    "message": "Sie haben die Filterliste der Annehmbaren Werbung nicht mehr abonniert.",
+    "message": "Sie haben die Filterliste der Akzeptablen Werbung nicht mehr abonniert.",
     "description": "Message shown to users after disabling Acceptable Ads via the Options page."
   },
   "acceptableadsdisable_how_to_reenable": {
@@ -1792,7 +1760,7 @@
     "description": "Message shown to users after disabling both EasyList Lite and EasyList via the Filter lists tab on the Options page."
   },
   "acceptable_ads_content_blocking_disbled_message": {
-    "message": "Wir haben Sie aus der Annehmbaren Werbung gelöscht, weil Sie Safari Content Blocking aktiviert haben. Sie können nur eine dieser Optionen auswählen. ([[Warum?]])",
+    "message": "Wir haben Sie aus der Akzeptablen Werbung gelöscht, weil Sie Safari Content Blocking aktiviert haben. Sie können nur eine dieser Optionen auswählen. ([[Warum?]])",
     "description": "Warning shown when Safari Content Blocking is enabled while the Acceptable Ads filter list was already enabled."
   },
   "content_blocking_acceptable_ads_disbled_message": {
@@ -2006,6 +1974,14 @@
   "myadblock_picreplacement_exlained": {
     "message": "Wählen Sie eine der unten stehenden Kategorien aus, damit AdBlock gelegentlich Werbung durch qualitativ hochwertige Bilder ersetzt und so Ihren Tag verschönert.",
     "description": "The label text for the switch on the MyAdBlock Options page"
+  },
+  "feedback_title": {
+    "message": "Feedback",
+    "description": "Title for feedback call to action."
+  },
+  "feedback_info": {
+    "message": "Haben Sie einen Kommentar oder eine Anfrage für uns? Wir würden uns freuen, von Ihnen zu hören!",
+    "description": "Text describing the MyAdBlock feedback call to action."
   },
   "myadblock_feedback_title": {
     "message": "Wir würden uns freuen, von Ihnen zu hören!",
@@ -2377,6 +2353,26 @@
     "message": "Bitte [[aktualisieren Sie AdBlock]], damit wir Ihre Einstellungen synchronisieren können.",
     "description": "button text on the Sync sub-tab of the Options page"
   },
+  "sync_removed_error_msg_part_1": {
+    "message": "Diese Erweiterung ist nicht synchronisiert",
+    "description": "sync error message text on the popup menu"
+  },
+  "sync_removed_error_msg_part_2": {
+    "message": "Klicken Sie hier, um Ihre Einstellungen zu aktualisieren",
+    "description": "sync error message text on the popup menu and options page"
+  },
+  "unsync_error_msg_part_1": {
+    "message": "Synchronisierungsfehler",
+    "description": "sync error message text on the options menu"
+  },
+  "unsync_error_msg_part_2": {
+    "message": "Diese Erweiterung wird nicht mehr synchronisiert.",
+    "description": "sync error message text on the popup menu"
+  },
+  "unsync_error_msg_part_3": {
+    "message": "Klicken Sie hier, um diese Seite zu aktualisieren, und klicken Sie dann auf \"Diese Erweiterung hinzufügen\", um dieses Gerät zu synchronisieren",
+    "description": "sync error message text on the Sync tab of the options page"
+  },
   "sync_premium_cta": {
     "message": "Mit Premium-Funktionen wie der Synchronisierung werden Sie ein Werbeblocker-Profi.",
     "description": "AdBlock Premium CTA on the Sync tab"
@@ -2417,16 +2413,24 @@
     "message": "(diese Erweiterung)",
     "description": "description for name of the current extension"
   },
+  "sync_delete_panel_title": {
+    "message": "Synchronisierte Erweiterung löschen",
+    "description": "Panel title text on the delete device overlay"
+  },
   "confirm_delete_extension": {
     "message": "Möchten Sie diese Erweiterung wirklich löschen?",
-    "description": "Warning/confirmation message shown when the user clicks on the delete icon for this extension"
+    "description": "Warning/confirmation message shown when the user clicks on the delete icon for a device"
+  },
+  "cannot_be_undone": {
+    "message": "Diese Aktion kann nicht rückgängig gemacht werden.",
+    "description": "Warning/confirmation message shown when the user clicks on the delete icon for a device"
   },
   "delete": {
     "message": "Löschen",
     "description": "Text on a delete button"
   },
   "filteracceptable_ads_privacy": {
-    "message": "Datenschutz für Annehmbare Werbung",
+    "message": "Datenschutz für Akzeptable Werbung",
     "description": "A filter list"
   },
   "acceptable_ads_privacy": {
