--- a/_locales/en_GB/messages.json
+++ b/_locales/en_GB/messages.json
@@ -79,8 +79,16 @@
     "message": "To hide the button, right click it and choose Remove from Toolbar.  You can show it again under Firefox menu -> Customize.",
     "description": "Message explaining how to hide the AdBlock toolbar button. 'Remove from Toolbar' should match the text that Firefox displays when you right click a toolbar button, and 'Customize' should match the text that shows when you click the button on the Firefox toolbar with three lines."
   },
+  "isithidden": {
+    "message": "Is the item hidden?",
+    "description": "'Block an ad' wizard usage explanation"
+  },
   "sliderexplanation": {
-    "message": "Slide the slider until the ad is blocked correctly on the page, and the blocked element looks useful.",
+    "message": "If not, use the slider to hide additional items on this page:",
+    "description": "'Block an ad' wizard usage explanation"
+  },
+  "sliderwarning": {
+    "message": "Be careful, hiding too much on a page can break some functionality",
     "description": "'Block an ad' wizard usage explanation"
   },
   "slidertitle": {
@@ -88,20 +96,26 @@
     "description": "'Block an ad' wizard title"
   },
   "blacklisteroptions1": {
-    "message": "What do you think will be true about this ad every time you visit this page?",
+    "message": "Keep this item hidden?",
     "description": "'Block an ad' wizard attribute choice page"
   },
-  "blacklisternotsure": {
-    "message": "Not sure? Just press 'Block it!' below.",
+  "blacklisternotsure_part_I": {
+    "message": "A rule will be added to your settings which will hide this item each time you visit the site.",
     "description": "'Block an ad' wizard attribute choice page"
   },
-  "blacklisterthefilter": {
-    "message": "The filter, which can be changed on the Options page:",
+  "blacklisternotsure_part_II": {
+    "message": "You can undo this any time by selecting 'Undo my hidden items on this page' from the AdBlock menu.",
     "description": "'Block an ad' wizard attribute choice page"
   },
-  "blacklisteroptionstitle": {
-    "message": "Last step: What makes this an ad?",
-    "description": "'Block an ad' wizard title"
+  "hiddenelementmessagecount": {
+    "message": "$count$ other items on this page are also temporarily hidden",
+    "description": "The total number of ads or 'things' hidden on a page by the new rule.",
+    "placeholders": {
+      "count": {
+        "content": "$1",
+        "example": "2"
+      }
+    }
   },
   "blacklisternofilter": {
     "message": "No filter specified!",
@@ -138,6 +152,10 @@
         "example": "DIV"
       }
     }
+  },
+  "warning": {
+    "message": "warning",
+    "description": "Warns the user about an error."
   },
   "blacklistersinglematch": {
     "message": "That matches 1 item on this page.",
@@ -179,20 +197,24 @@
     "message": "Back",
     "description": "Back to previous page button"
   },
-  "block_something_else": {
-    "message": "Block something else",
-    "description": "Button text on page 3 of the hiding wizard"
+  "add_info": {
+    "message": "Additional information",
+    "description": "section title on hidding wizard, shown when advance user option enabled"
+  },
+  "confirm_msg": {
+    "message": "Confirm that the Type and ID of this item looks correct:",
+    "description": "text on hidding wizard, shown when advance user option enabled"
   },
   "findingads": {
     "message": "Finding ads...\n\nThis'll only take a moment.",
     "description": "'Block an ad' wizard loading message"
   },
   "blockanadtitle": {
-    "message": "Block an ad",
+    "message": "AdBlock Hiding Wizard",
     "description": "Title of the first two dialogs of the 'Block an ad' wizard"
   },
   "clickthead": {
-    "message": "Click the ad, and I'll walk you through blocking it.",
+    "message": "Click on any item on this page you’d like to hide.",
     "description": "User has to click the ad they want to block."
   },
   "adblock_wont_run_on_pages_matching": {
@@ -210,6 +232,10 @@
   "buttonexclude": {
     "message": "Exclude",
     "description": "Button for excluding a domain in the allowlist wizard"
+  },
+  "buttonconfirm": {
+    "message": "Confirm",
+    "description": "Button for confirming a new rule in the hiding wizard"
   },
   "reloadpageafterwhitelist": {
     "message": "Reload the page.",
@@ -2843,6 +2869,10 @@
     "message": "Learn More",
     "description": "Text in the aria-label attribute of an icon linking to extra information about an option."
   },
+  "find_out_more": {
+    "message": "Find Out More",
+    "description": "Text in the button on the Premium CTA on the hiding wizard."
+  },
   "update_filter_lists_now": {
     "message": "Update Filter Lists Now",
     "description": "Text in the aria-label attribute of the 'update now' button on the Options page in the Filter Lists tab."
@@ -2935,20 +2965,24 @@
     "message": "You just added a site to your allowlist!",
     "description": "Part 1 of a call-to-action on the allowlist wizard"
   },
+  "dont_show_me_again": {
+    "message": "Don’t show me this message again",
+    "description": "opt out option on all-to-action on the blocklist / hiding wizard"
+  },
   "never_lose_settings": {
     "message": "Apply this setting to all of your devices and ensure you never lose your AdBlock settings with Backup & Sync.",
     "description": "Part 2 of a call-to-action on the allowlist and blocklist wizards"
   },
-  "successfully_blocked_ad": {
-    "message": "You have successfully blocked this ad.",
+  "wizard_premium_cta_title": {
+    "message": "Hey, looks like you might like AdBlock Premium",
     "description": "Part of a message on the blocklist wizard"
   },
-  "future_ads_blocked": {
-    "message": "In future, ads that match these rules will continue to be blocked.",
+  "wizard_premium_cta_part_I": {
+    "message": "You just blocked something on this site.",
     "description": "Part of a message on the blocklist wizard"
   },
-  "rule_added_filters": {
-    "message": "The following rule has been added to your filters:",
+  "wizard_premium_cta_part_II": {
+    "message": "Apply this preference to all of your devices and ensure you never lose your AdBlock settings with Backup & Sync.",
     "description": "Part of a message on the blocklist wizard"
   },
   "blocked_something": {
