--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -489,10 +489,6 @@
     "message": "Indonésien + EasyList",
     "description": "A filter list combined with EasyList"
   },
-  "filtermalware": {
-    "message": "Protection contre les logiciels malveillants",
-    "description": "A filter list"
-  },
   "filterbitcoin_mining_protection": {
     "message": "Liste de protection anti-minage de cryptomonnaie (Bitcoin)",
     "description": "A filter list"
@@ -604,34 +600,6 @@
   "adreportvoluntary": {
     "message": "Le signalement de publicités est basé sur le volontariat. Il aide chacun en permettant aux éditeurs de la liste de filtres à bloquer la publicité pour tout le monde. Si vous ne vous sentez pas d'humeur altruiste, pas d'inquiétude. Fermez cette page et [[bloquez la publicité]] rien que pour vous.",
     "description": "Introduction of the ad reporting page"
-  },
-  "malwarenotificationcheckboxmessage": {
-    "message": "Laisser AdBlock vous avertir quand un logiciel malveillant est détecté ?",
-    "description": "Checkbox displayed when subscribing to the 'Malware protection' filter list on the Filter lists tab of the Options page"
-  },
-  "malwarenotificationmessage": {
-    "message": "AdBlock a bloqué un téléchargement venant d'un site connu pour héberger des logiciels malveillants.",
-    "description": "Notification when a potential malware request has been blocked. This message should be under 90 characters!"
-  },
-  "malwarenotificationlearnmore": {
-    "message": "Plus d'infos sur les logiciels malveillants",
-    "description": "Button on the malware notification that opens a page about malware on the AdBlock website. Message should be under 45 characters!"
-  },
-  "malwarenotificationdisablethesemessages": {
-    "message": "Désactiver ces notifications",
-    "description": "Button on the malware notification to disable future notifications. Message should be under 45 characters!"
-  },
-  "malwarecheck": {
-    "message": "Rechercher des logiciels malveillants qui implantent des publicités :",
-    "description": "Section header on the ad report page"
-  },
-  "malwarewarning": {
-    "message": "Votre ordinateur est peut-être infecté par des logiciels malveillants.  Cliquez [[ici]] pour en savoir plus.",
-    "description": "On the ad report page, the ads the user is seeing might be caused by malware/adware"
-  },
-  "malwarenotfound": {
-    "message": "Aucun logiciel malveillant connu n'a été trouvé.",
-    "description": "On the ad report page, the ads the user is seeing are probably not caused by malware/adware"
   },
   "disableaa": {
     "message": "Vérifiez les filtres Publicité Acceptable :",
@@ -2007,6 +1975,14 @@
     "message": "Faites un choix parmi les catégories ci-dessous et AdBlock remplacera de temps en temps des publicités par des images de haute qualité pour égayer votre journée.",
     "description": "The label text for the switch on the MyAdBlock Options page"
   },
+  "feedback_title": {
+    "message": "Commentaires",
+    "description": "Title for feedback call to action."
+  },
+  "feedback_info": {
+    "message": "Un commentaire ou une demande vis-à-vis d'une fonctionnalité ? N'hésitez pas à nous contacter !",
+    "description": "Text describing the MyAdBlock feedback call to action."
+  },
   "myadblock_feedback_title": {
     "message": "N'hésitez pas à nous contacter !",
     "description": "Title for MyAdBlock feedback call to action."
@@ -2377,6 +2353,26 @@
     "message": "Veuillez [[mettre à jour AdBlock]] pour que vos paramètres soient synchronisés.",
     "description": "button text on the Sync sub-tab of the Options page"
   },
+  "sync_removed_error_msg_part_1": {
+    "message": "Cette extension n'est pas synchronisée",
+    "description": "sync error message text on the popup menu"
+  },
+  "sync_removed_error_msg_part_2": {
+    "message": "Cliquez ici pour mettre à jour vos paramètres",
+    "description": "sync error message text on the popup menu and options page"
+  },
+  "unsync_error_msg_part_1": {
+    "message": "Erreur de synchro",
+    "description": "sync error message text on the options menu"
+  },
+  "unsync_error_msg_part_2": {
+    "message": "Cette extension n'est plus synchronisée.",
+    "description": "sync error message text on the popup menu"
+  },
+  "unsync_error_msg_part_3": {
+    "message": "Cliquez ici pour réactualiser cette page, puis cliquez sur \"Ajouter cette extension\" pour synchroniser l'appareil",
+    "description": "sync error message text on the Sync tab of the options page"
+  },
   "sync_premium_cta": {
     "message": "Avec les fonctionnalités Premium telles que la Synchro, vous bloquerez les publicités comme un pro.",
     "description": "AdBlock Premium CTA on the Sync tab"
@@ -2417,9 +2413,17 @@
     "message": "(cette extension)",
     "description": "description for name of the current extension"
   },
+  "sync_delete_panel_title": {
+    "message": "Supprimer l'extension synchro",
+    "description": "Panel title text on the delete device overlay"
+  },
   "confirm_delete_extension": {
     "message": "Voulez-vous vraiment supprimer cette extension ?",
-    "description": "Warning/confirmation message shown when the user clicks on the delete icon for this extension"
+    "description": "Warning/confirmation message shown when the user clicks on the delete icon for a device"
+  },
+  "cannot_be_undone": {
+    "message": "Cette action ne peut pas être annulée.",
+    "description": "Warning/confirmation message shown when the user clicks on the delete icon for a device"
   },
   "delete": {
     "message": "Supprimer",
