--- a/_locales/nl/messages.json
+++ b/_locales/nl/messages.json
@@ -489,10 +489,6 @@
     "message": "Indonesisch + EasyList",
     "description": "A filter list combined with EasyList"
   },
-  "filtermalware": {
-    "message": "Malwarebescherming",
-    "description": "A filter list"
-  },
   "filterbitcoin_mining_protection": {
     "message": "Beschermingslijst tegen delven cryptogeld (Bitcoin)",
     "description": "A filter list"
@@ -604,34 +600,6 @@
   "adreportvoluntary": {
     "message": "Het rapporteren van advertenties verloopt op vrijwillige basis. Je helpt er andere mensen mee door de onderhouders van de filterlijst de advertentie voor iedereen te laten blokkeren. Als je nu niet zo'n zin hebt om een weldoener te zijn, geeft dat niet. Sluit deze pagina en [[blokkeer de advertentie]] alleen voor jezelf.",
     "description": "Introduction of the ad reporting page"
-  },
-  "malwarenotificationcheckboxmessage": {
-    "message": "Moet AdBlock je een bericht sturen als er malware wordt gedetecteerd?",
-    "description": "Checkbox displayed when subscribing to the 'Malware protection' filter list on the Filter lists tab of the Options page"
-  },
-  "malwarenotificationmessage": {
-    "message": "AdBlock heeft een download geblokkeerd van een site die erom bekend staat malware te hosten.",
-    "description": "Notification when a potential malware request has been blocked. This message should be under 90 characters!"
-  },
-  "malwarenotificationlearnmore": {
-    "message": "Meer informatie over malware",
-    "description": "Button on the malware notification that opens a page about malware on the AdBlock website. Message should be under 45 characters!"
-  },
-  "malwarenotificationdisablethesemessages": {
-    "message": "Deze meldingen uitschakelen",
-    "description": "Button on the malware notification to disable future notifications. Message should be under 45 characters!"
-  },
-  "malwarecheck": {
-    "message": "Controleer op malware die mogelijk advertenties besmet:",
-    "description": "Section header on the ad report page"
-  },
-  "malwarewarning": {
-    "message": "Je computer is mogelijk besmet met malware. Klik [[hier]] voor meer informatie.",
-    "description": "On the ad report page, the ads the user is seeing might be caused by malware/adware"
-  },
-  "malwarenotfound": {
-    "message": "Geen bekende malware gevonden.",
-    "description": "On the ad report page, the ads the user is seeing are probably not caused by malware/adware"
   },
   "disableaa": {
     "message": "Bekijk de Acceptabele advertenties-filters:",
@@ -2007,6 +1975,14 @@
     "message": "Selecteer uit de categorieën hieronder, dan vervangt AdBlock af en toe advertenties met eersteklas afbeeldingen om je dag op te fleuren.",
     "description": "The label text for the switch on the MyAdBlock Options page"
   },
+  "feedback_title": {
+    "message": "Feedback",
+    "description": "Title for feedback call to action."
+  },
+  "feedback_info": {
+    "message": "Wil je je mening of een functieverzoek met ons delen? We horen graag van je!",
+    "description": "Text describing the MyAdBlock feedback call to action."
+  },
   "myadblock_feedback_title": {
     "message": "We horen graag van je!",
     "description": "Title for MyAdBlock feedback call to action."
@@ -2377,6 +2353,26 @@
     "message": "[[Update AdBlock]] zodat we je instellingen kunnen synchroniseren.",
     "description": "button text on the Sync sub-tab of the Options page"
   },
+  "sync_removed_error_msg_part_1": {
+    "message": "Deze extensie is niet gesynchroniseerd",
+    "description": "sync error message text on the popup menu"
+  },
+  "sync_removed_error_msg_part_2": {
+    "message": "Klik hier om je instellingen te updaten",
+    "description": "sync error message text on the popup menu and options page"
+  },
+  "unsync_error_msg_part_1": {
+    "message": "Synchronisatiefout",
+    "description": "sync error message text on the options menu"
+  },
+  "unsync_error_msg_part_2": {
+    "message": "Deze extensie wordt niet meer gesynchroniseerd.",
+    "description": "sync error message text on the popup menu"
+  },
+  "unsync_error_msg_part_3": {
+    "message": "Klik hier om deze pagina te verversen, en klik vervolgens op \"Extensie toevoegen\" om dit apparaat te synchroniseren",
+    "description": "sync error message text on the Sync tab of the options page"
+  },
   "sync_premium_cta": {
     "message": "Je wordt een advertentieblokkerende pro met Premium-functies zoals Synchroniseren.",
     "description": "AdBlock Premium CTA on the Sync tab"
@@ -2417,9 +2413,17 @@
     "message": "(deze extensie)",
     "description": "description for name of the current extension"
   },
+  "sync_delete_panel_title": {
+    "message": "Gesynchroniseerde extensie verwijderen",
+    "description": "Panel title text on the delete device overlay"
+  },
   "confirm_delete_extension": {
     "message": "Weet je zeker dat je deze extensie wilt verwijderen?",
-    "description": "Warning/confirmation message shown when the user clicks on the delete icon for this extension"
+    "description": "Warning/confirmation message shown when the user clicks on the delete icon for a device"
+  },
+  "cannot_be_undone": {
+    "message": "Deze handeling kan niet ongedaan worden gemaakt.",
+    "description": "Warning/confirmation message shown when the user clicks on the delete icon for a device"
   },
   "delete": {
     "message": "Verwijderen",
