--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -489,10 +489,6 @@
     "message": "Indonésio + EasyList",
     "description": "A filter list combined with EasyList"
   },
-  "filtermalware": {
-    "message": "Proteção de malwares",
-    "description": "A filter list"
-  },
   "filterbitcoin_mining_protection": {
     "message": "Lista de Proteção Contra Mineração de Criptomoedas (Bitcoin)",
     "description": "A filter list"
@@ -604,34 +600,6 @@
   "adreportvoluntary": {
     "message": "Relatar anúncios é voluntário. Isso ajuda outras pessoas permitindo que os gerenciadores de listas de filtros bloqueiem o anúncio para todo mundo. Se você não está empolgado com a ideia agora, tudo bem. Feche essa página e [[bloqueie o anúncio]] para você, apenas.",
     "description": "Introduction of the ad reporting page"
-  },
-  "malwarenotificationcheckboxmessage": {
-    "message": "O AdBlock deve notificá-lo ao encontrar um malware?",
-    "description": "Checkbox displayed when subscribing to the 'Malware protection' filter list on the Filter lists tab of the Options page"
-  },
-  "malwarenotificationmessage": {
-    "message": "AdBlock bloqueou um download de um site conhecido por ter malwares.",
-    "description": "Notification when a potential malware request has been blocked. This message should be under 90 characters!"
-  },
-  "malwarenotificationlearnmore": {
-    "message": "Saiba mais sobre malwares",
-    "description": "Button on the malware notification that opens a page about malware on the AdBlock website. Message should be under 45 characters!"
-  },
-  "malwarenotificationdisablethesemessages": {
-    "message": "Desabilitar essas notificações",
-    "description": "Button on the malware notification to disable future notifications. Message should be under 45 characters!"
-  },
-  "malwarecheck": {
-    "message": "Procure por malwares que possam estar criando anúncios:",
-    "description": "Section header on the ad report page"
-  },
-  "malwarewarning": {
-    "message": "Seu computador pode estar infectado com malwares. Clique [[aqui]] para mais informações.",
-    "description": "On the ad report page, the ads the user is seeing might be caused by malware/adware"
-  },
-  "malwarenotfound": {
-    "message": "Nenhum malware conhecido foi encontrado.",
-    "description": "On the ad report page, the ads the user is seeing are probably not caused by malware/adware"
   },
   "disableaa": {
     "message": "Verifique os filtros de Anúncios Aceitáveis:",
@@ -2007,6 +1975,14 @@
     "message": "Selecione as categorias abaixo e o AdBlock vai ocasionalmente substituir anúncios com imagens de alta qualidade para alegrar o seu dia.",
     "description": "The label text for the switch on the MyAdBlock Options page"
   },
+  "feedback_title": {
+    "message": "Comentários",
+    "description": "Title for feedback call to action."
+  },
+  "feedback_info": {
+    "message": "Tem algum comentário ou solicitação de recurso? Sua opinião é muito importante!",
+    "description": "Text describing the MyAdBlock feedback call to action."
+  },
   "myadblock_feedback_title": {
     "message": "Adoraríamos ouvir de você!",
     "description": "Title for MyAdBlock feedback call to action."
@@ -2377,6 +2353,26 @@
     "message": "[[Atualize o AdBlock]] para que possamos sincronizar suas configurações.",
     "description": "button text on the Sync sub-tab of the Options page"
   },
+  "sync_removed_error_msg_part_1": {
+    "message": "Esta extensão não foi sincronizada",
+    "description": "sync error message text on the popup menu"
+  },
+  "sync_removed_error_msg_part_2": {
+    "message": "Clique aqui para atualizar suas configurações",
+    "description": "sync error message text on the popup menu and options page"
+  },
+  "unsync_error_msg_part_1": {
+    "message": "Erro de sincronização",
+    "description": "sync error message text on the options menu"
+  },
+  "unsync_error_msg_part_2": {
+    "message": "Esta extensão não está mais sendo sincronizada.",
+    "description": "sync error message text on the popup menu"
+  },
+  "unsync_error_msg_part_3": {
+    "message": "Clique aqui para atualizar esta página, em seguida clique em \"Adicionar esta extensão\" para sincronizar este dispositivo",
+    "description": "sync error message text on the Sync tab of the options page"
+  },
   "sync_premium_cta": {
     "message": "Você será profissional em bloquear anúncios com funções Premium como a Sincronização.",
     "description": "AdBlock Premium CTA on the Sync tab"
@@ -2417,9 +2413,17 @@
     "message": "(essa extensão)",
     "description": "description for name of the current extension"
   },
+  "sync_delete_panel_title": {
+    "message": "Excluir extensão sincronizada",
+    "description": "Panel title text on the delete device overlay"
+  },
   "confirm_delete_extension": {
     "message": "Tem certeza de que deseja excluir essa extensão?",
-    "description": "Warning/confirmation message shown when the user clicks on the delete icon for this extension"
+    "description": "Warning/confirmation message shown when the user clicks on the delete icon for a device"
+  },
+  "cannot_be_undone": {
+    "message": "Esta ação não pode ser desfeita.",
+    "description": "Warning/confirmation message shown when the user clicks on the delete icon for a device"
   },
   "delete": {
     "message": "Excluir",
