--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -489,10 +489,6 @@
     "message": "Индонезийский + EasyList",
     "description": "A filter list combined with EasyList"
   },
-  "filtermalware": {
-    "message": "Защита от вредоносных программ",
-    "description": "A filter list"
-  },
   "filterbitcoin_mining_protection": {
     "message": "Защита от майнинга криптовалюты (биткоинов)",
     "description": "A filter list"
@@ -604,34 +600,6 @@
   "adreportvoluntary": {
     "message": "Составление отчетов — дело добровольное. Если вам не хочется помочь другим людям составить максимально подробный список фильтров, который не пропустит ни одного объявления, то ничего страшного в этом нет. Просто закройте страницу и [[заблокируйте объявление]] только для себя.",
     "description": "Introduction of the ad reporting page"
-  },
-  "malwarenotificationcheckboxmessage": {
-    "message": "Уведомлять об обнаружении вредоносных программ?",
-    "description": "Checkbox displayed when subscribing to the 'Malware protection' filter list on the Filter lists tab of the Options page"
-  },
-  "malwarenotificationmessage": {
-    "message": "AdBlock остановил загрузку с сайта, на котором размещают вредоносное ПО.",
-    "description": "Notification when a potential malware request has been blocked. This message should be under 90 characters!"
-  },
-  "malwarenotificationlearnmore": {
-    "message": "Узнать о вредоносном ПО больше",
-    "description": "Button on the malware notification that opens a page about malware on the AdBlock website. Message should be under 45 characters!"
-  },
-  "malwarenotificationdisablethesemessages": {
-    "message": "Отключить эти уведомления",
-    "description": "Button on the malware notification to disable future notifications. Message should be under 45 characters!"
-  },
-  "malwarecheck": {
-    "message": "Проверка на наличие в рекламе вредоносного ПО:",
-    "description": "Section header on the ad report page"
-  },
-  "malwarewarning": {
-    "message": "Возможно, ваш компьютер заражен вредоносными программами. [[Здесь]] можно узнать подробности.",
-    "description": "On the ad report page, the ads the user is seeing might be caused by malware/adware"
-  },
-  "malwarenotfound": {
-    "message": "Вредоносного ПО не обнаружено.",
-    "description": "On the ad report page, the ads the user is seeing are probably not caused by malware/adware"
   },
   "disableaa": {
     "message": "Проверить Приемлемую рекламу:",
@@ -2007,6 +1975,14 @@
     "message": "Выберите категорию из списка ниже, и периодически AdBlock будет заменять рекламу на HD-изображения и поднимать вам настроение.",
     "description": "The label text for the switch on the MyAdBlock Options page"
   },
+  "feedback_title": {
+    "message": "Обратная связь",
+    "description": "Title for feedback call to action."
+  },
+  "feedback_info": {
+    "message": "Хотите оставить отзыв или у вас есть предложение? Мы рады пообщаться с вами!",
+    "description": "Text describing the MyAdBlock feedback call to action."
+  },
   "myadblock_feedback_title": {
     "message": "Поделитесь впечатлениями!",
     "description": "Title for MyAdBlock feedback call to action."
@@ -2377,6 +2353,26 @@
     "message": "Для синхронизации настроек вам нужно [[обновить AdBlock]].",
     "description": "button text on the Sync sub-tab of the Options page"
   },
+  "sync_removed_error_msg_part_1": {
+    "message": "Расширение не синхронизовано",
+    "description": "sync error message text on the popup menu"
+  },
+  "sync_removed_error_msg_part_2": {
+    "message": "Нажмите здесь, чтобы обновить настройки",
+    "description": "sync error message text on the popup menu and options page"
+  },
+  "unsync_error_msg_part_1": {
+    "message": "Ошибка синхронизации",
+    "description": "sync error message text on the options menu"
+  },
+  "unsync_error_msg_part_2": {
+    "message": "Данное расширение больше не синхронизируется.",
+    "description": "sync error message text on the popup menu"
+  },
+  "unsync_error_msg_part_3": {
+    "message": "Нажмите здесь, чтобы обновить страницу, затем нажмите на \"Добавить расширение\", чтобы синхронизировать устройство.",
+    "description": "sync error message text on the Sync tab of the options page"
+  },
   "sync_premium_cta": {
     "message": "Одна из функций Premium: синхронизация",
     "description": "AdBlock Premium CTA on the Sync tab"
@@ -2417,9 +2413,17 @@
     "message": "(это расширение)",
     "description": "description for name of the current extension"
   },
+  "sync_delete_panel_title": {
+    "message": "Удалить синхронизированное расширение",
+    "description": "Panel title text on the delete device overlay"
+  },
   "confirm_delete_extension": {
     "message": "Удалить расширение?",
-    "description": "Warning/confirmation message shown when the user clicks on the delete icon for this extension"
+    "description": "Warning/confirmation message shown when the user clicks on the delete icon for a device"
+  },
+  "cannot_be_undone": {
+    "message": "Данное действие нельзя отменить.",
+    "description": "Warning/confirmation message shown when the user clicks on the delete icon for a device"
   },
   "delete": {
     "message": "Удалить",
