--- a/_locales/sv/messages.json
+++ b/_locales/sv/messages.json
@@ -489,10 +489,6 @@
     "message": "Indonesiska + EasyList",
     "description": "A filter list combined with EasyList"
   },
-  "filtermalware": {
-    "message": "Skydd mot skadlig kod",
-    "description": "A filter list"
-  },
   "filterbitcoin_mining_protection": {
     "message": "Skyddslista för kryptovaluta-mining (Bitcoin)",
     "description": "A filter list"
@@ -604,34 +600,6 @@
   "adreportvoluntary": {
     "message": "Att rapportera annonser är frivilligt. Det hjälper andra genom att låta de som underhåller filterlistorna blockera annonsen för alla. Om du inte känner att du vill hjälpa till just nu, så är det okej. Stäng den här sidan och [[blockera annonsen]] bara för dig själv.",
     "description": "Introduction of the ad reporting page"
-  },
-  "malwarenotificationcheckboxmessage": {
-    "message": "Ska AdBlock meddela dig när den upptäcker skadlig kod?",
-    "description": "Checkbox displayed when subscribing to the 'Malware protection' filter list on the Filter lists tab of the Options page"
-  },
-  "malwarenotificationmessage": {
-    "message": "AdBlock har blockerat en nedladdning från en plats som är känd för att innehålla skadlig kod.",
-    "description": "Notification when a potential malware request has been blocked. This message should be under 90 characters!"
-  },
-  "malwarenotificationlearnmore": {
-    "message": "Läs mer om skadlig kod",
-    "description": "Button on the malware notification that opens a page about malware on the AdBlock website. Message should be under 45 characters!"
-  },
-  "malwarenotificationdisablethesemessages": {
-    "message": "Inaktivera dessa aviseringar",
-    "description": "Button on the malware notification to disable future notifications. Message should be under 45 characters!"
-  },
-  "malwarecheck": {
-    "message": "Sök efter skadlig kod som kan lägga in annonser:",
-    "description": "Section header on the ad report page"
-  },
-  "malwarewarning": {
-    "message": "Din dator kan vara infekterad av skadlig kod. Klicka [[här]] för mer information.",
-    "description": "On the ad report page, the ads the user is seeing might be caused by malware/adware"
-  },
-  "malwarenotfound": {
-    "message": "Ingen känd skadlig kod hittad.",
-    "description": "On the ad report page, the ads the user is seeing are probably not caused by malware/adware"
   },
   "disableaa": {
     "message": "Kontrollera filtren för Godtagbara annonser:",
@@ -2007,6 +1975,14 @@
     "message": "Välj bland kategorierna nedan så kommer AdBlock ibland att ersätta annonser med bilder i hög kvalitet för att pigga upp din dag.",
     "description": "The label text for the switch on the MyAdBlock Options page"
   },
+  "feedback_title": {
+    "message": "Feedback",
+    "description": "Title for feedback call to action."
+  },
+  "feedback_info": {
+    "message": "Har du en kommentar eller förslag om funktioner för oss? Vi hör dem gärna!",
+    "description": "Text describing the MyAdBlock feedback call to action."
+  },
   "myadblock_feedback_title": {
     "message": "Hör gärna av dig till oss!",
     "description": "Title for MyAdBlock feedback call to action."
@@ -2377,6 +2353,26 @@
     "message": "[[Uppdatera AdBlock]] så att vi kan synka dina inställningar.",
     "description": "button text on the Sync sub-tab of the Options page"
   },
+  "sync_removed_error_msg_part_1": {
+    "message": "Det här tillägget är inte synkat",
+    "description": "sync error message text on the popup menu"
+  },
+  "sync_removed_error_msg_part_2": {
+    "message": "Klicka här för att uppdatera dina inställningar",
+    "description": "sync error message text on the popup menu and options page"
+  },
+  "unsync_error_msg_part_1": {
+    "message": "Synkfel",
+    "description": "sync error message text on the options menu"
+  },
+  "unsync_error_msg_part_2": {
+    "message": "Det här tillägget synkas inte längre.",
+    "description": "sync error message text on the popup menu"
+  },
+  "unsync_error_msg_part_3": {
+    "message": "Klicka här för att uppdatera sidan och sedan på \"Lägg till detta tillägg\" för att synka denna enhet",
+    "description": "sync error message text on the Sync tab of the options page"
+  },
   "sync_premium_cta": {
     "message": "Du blir ett blockeringsproffs med Premium-funktioner som t.ex. synkronisering.",
     "description": "AdBlock Premium CTA on the Sync tab"
@@ -2417,9 +2413,17 @@
     "message": "(det här tillägget)",
     "description": "description for name of the current extension"
   },
+  "sync_delete_panel_title": {
+    "message": "Radera synkat tillägg",
+    "description": "Panel title text on the delete device overlay"
+  },
   "confirm_delete_extension": {
     "message": "Vill du verkligen radera det här tillägget?",
-    "description": "Warning/confirmation message shown when the user clicks on the delete icon for this extension"
+    "description": "Warning/confirmation message shown when the user clicks on the delete icon for a device"
+  },
+  "cannot_be_undone": {
+    "message": "Denna åtgärd kan inte ångras.",
+    "description": "Warning/confirmation message shown when the user clicks on the delete icon for a device"
   },
   "delete": {
     "message": "Radera",
