--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -489,10 +489,6 @@
     "message": "印度尼西亚语 + EasyList",
     "description": "A filter list combined with EasyList"
   },
-  "filtermalware": {
-    "message": "恶意软件保护",
-    "description": "A filter list"
-  },
   "filterbitcoin_mining_protection": {
     "message": "加密货币（比特币）挖矿保护列表",
     "description": "A filter list"
@@ -604,34 +600,6 @@
   "adreportvoluntary": {
     "message": "报告广告是自愿的。这可帮助拦截规则列表的维护人员拦截新的广告，从而帮助更多用户。如果你不愿意报告广告，那也没关系。关闭此页面仍可仅为你自己[[拦截广告]]。",
     "description": "Introduction of the ad reporting page"
-  },
-  "malwarenotificationcheckboxmessage": {
-    "message": "当 AdBlock 检测到恶意软件时，是否通知你？",
-    "description": "Checkbox displayed when subscribing to the 'Malware protection' filter list on the Filter lists tab of the Options page"
-  },
-  "malwarenotificationmessage": {
-    "message": "AdBlock 阻止了一个已知含有恶意软件的网站的下载。",
-    "description": "Notification when a potential malware request has been blocked. This message should be under 90 characters!"
-  },
-  "malwarenotificationlearnmore": {
-    "message": "了解有关恶意软件的更多信息",
-    "description": "Button on the malware notification that opens a page about malware on the AdBlock website. Message should be under 45 characters!"
-  },
-  "malwarenotificationdisablethesemessages": {
-    "message": "禁用这些通知",
-    "description": "Button on the malware notification to disable future notifications. Message should be under 45 characters!"
-  },
-  "malwarecheck": {
-    "message": "检查可能会植入广告的恶意软件：",
-    "description": "Section header on the ad report page"
-  },
-  "malwarewarning": {
-    "message": "你的电脑可能感染了恶意软件。点击[[这里]]了解详情。",
-    "description": "On the ad report page, the ads the user is seeing might be caused by malware/adware"
-  },
-  "malwarenotfound": {
-    "message": "未找到已知的恶意软件。",
-    "description": "On the ad report page, the ads the user is seeing are probably not caused by malware/adware"
   },
   "disableaa": {
     "message": "检查可接受的广告的拦截规则：",
@@ -2007,6 +1975,14 @@
     "message": "从以下类别中进行选择，AdBlock 偶尔会将广告替换为高质量的图片，以照亮你的一天。",
     "description": "The label text for the switch on the MyAdBlock Options page"
   },
+  "feedback_title": {
+    "message": "反馈",
+    "description": "Title for feedback call to action."
+  },
+  "feedback_info": {
+    "message": "为我们提出意见或功能请求？我们很乐意收到您的留言！",
+    "description": "Text describing the MyAdBlock feedback call to action."
+  },
   "myadblock_feedback_title": {
     "message": "我们很想听到您的意见！",
     "description": "Title for MyAdBlock feedback call to action."
@@ -2377,6 +2353,26 @@
     "message": "请[[更新 AdBlock]]，以同步你的设置。",
     "description": "button text on the Sync sub-tab of the Options page"
   },
+  "sync_removed_error_msg_part_1": {
+    "message": "此扩展未同步",
+    "description": "sync error message text on the popup menu"
+  },
+  "sync_removed_error_msg_part_2": {
+    "message": "点击这里更新设置",
+    "description": "sync error message text on the popup menu and options page"
+  },
+  "unsync_error_msg_part_1": {
+    "message": "同步错误",
+    "description": "sync error message text on the options menu"
+  },
+  "unsync_error_msg_part_2": {
+    "message": "此扩展不再同步。",
+    "description": "sync error message text on the popup menu"
+  },
+  "unsync_error_msg_part_3": {
+    "message": "点击这里刷新此页面，然后点击\"添加此扩展\"同步此设备",
+    "description": "sync error message text on the Sync tab of the options page"
+  },
   "sync_premium_cta": {
     "message": "借助“同步”等Premium功能，您会成为广告拦截专家。",
     "description": "AdBlock Premium CTA on the Sync tab"
@@ -2417,9 +2413,17 @@
     "message": "（此扩展）",
     "description": "description for name of the current extension"
   },
+  "sync_delete_panel_title": {
+    "message": "删除已同步扩展",
+    "description": "Panel title text on the delete device overlay"
+  },
   "confirm_delete_extension": {
     "message": "确定要删除此扩展吗？",
-    "description": "Warning/confirmation message shown when the user clicks on the delete icon for this extension"
+    "description": "Warning/confirmation message shown when the user clicks on the delete icon for a device"
+  },
+  "cannot_be_undone": {
+    "message": "此操作无法撤消。",
+    "description": "Warning/confirmation message shown when the user clicks on the delete icon for a device"
   },
   "delete": {
     "message": "删除",
