--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -489,10 +489,6 @@
     "message": "印尼文 + EasyList",
     "description": "A filter list combined with EasyList"
   },
-  "filtermalware": {
-    "message": "惡意軟體保護",
-    "description": "A filter list"
-  },
   "filterbitcoin_mining_protection": {
     "message": "加密貨幣（比特幣）挖礦保護清單",
     "description": "A filter list"
@@ -604,34 +600,6 @@
   "adreportvoluntary": {
     "message": "回報廣告是自願性質，可以讓過濾清單維護者為大家阻擋廣告、造福大眾。如果您現在不想幫助別人也沒關係，只要關閉本頁並為您自己[[阻擋廣告]]。",
     "description": "Introduction of the ad reporting page"
-  },
-  "malwarenotificationcheckboxmessage": {
-    "message": "當 AdBlock 檢測到惡意軟體時，是否應該通知您？",
-    "description": "Checkbox displayed when subscribing to the 'Malware protection' filter list on the Filter lists tab of the Options page"
-  },
-  "malwarenotificationmessage": {
-    "message": "AdBlock 已從已知具有惡意軟體的網站阻擋下載動作。",
-    "description": "Notification when a potential malware request has been blocked. This message should be under 90 characters!"
-  },
-  "malwarenotificationlearnmore": {
-    "message": "瞭解有關惡意軟體的詳細資訊",
-    "description": "Button on the malware notification that opens a page about malware on the AdBlock website. Message should be under 45 characters!"
-  },
-  "malwarenotificationdisablethesemessages": {
-    "message": "停用這些通知",
-    "description": "Button on the malware notification to disable future notifications. Message should be under 45 characters!"
-  },
-  "malwarecheck": {
-    "message": "檢查可能會插入廣告的惡意軟體：",
-    "description": "Section header on the ad report page"
-  },
-  "malwarewarning": {
-    "message": "您的電腦可能感染了惡意軟體。請按[[這裡]]了解相關詳情。",
-    "description": "On the ad report page, the ads the user is seeing might be caused by malware/adware"
-  },
-  "malwarenotfound": {
-    "message": "未找到已知的惡意軟體。",
-    "description": "On the ad report page, the ads the user is seeing are probably not caused by malware/adware"
   },
   "disableaa": {
     "message": "檢查可接受廣告過濾條件：",
@@ -2007,6 +1975,14 @@
     "message": "從以下類別選擇，AdBlock 有時就會將廣告替換為高畫質圖片，帶給您愉快的心情。",
     "description": "The label text for the switch on the MyAdBlock Options page"
   },
+  "feedback_title": {
+    "message": "提供回饋",
+    "description": "Title for feedback call to action."
+  },
+  "feedback_info": {
+    "message": "有任何意見或希望的功能嗎？歡迎盡量提出！",
+    "description": "Text describing the MyAdBlock feedback call to action."
+  },
   "myadblock_feedback_title": {
     "message": "我們很樂意聽到您的意見！",
     "description": "Title for MyAdBlock feedback call to action."
@@ -2377,6 +2353,26 @@
     "message": "請[[更新 AdBlock]] 以便我們將您的設定同步。",
     "description": "button text on the Sync sub-tab of the Options page"
   },
+  "sync_removed_error_msg_part_1": {
+    "message": "這項擴充套件並未同步",
+    "description": "sync error message text on the popup menu"
+  },
+  "sync_removed_error_msg_part_2": {
+    "message": "按一下這裡以更新設定",
+    "description": "sync error message text on the popup menu and options page"
+  },
+  "unsync_error_msg_part_1": {
+    "message": "同步錯誤",
+    "description": "sync error message text on the options menu"
+  },
+  "unsync_error_msg_part_2": {
+    "message": "這項擴充套件已經不再同步。",
+    "description": "sync error message text on the popup menu"
+  },
+  "unsync_error_msg_part_3": {
+    "message": "按一下這裡以更新這個頁面，接著按一下「新增此擴充套件」以同步這個裝置",
+    "description": "sync error message text on the Sync tab of the options page"
+  },
   "sync_premium_cta": {
     "message": "有了「同步」等 Premium 功能，您將成為廣告攔截專家。",
     "description": "AdBlock Premium CTA on the Sync tab"
@@ -2417,9 +2413,17 @@
     "message": "（此擴充套件）",
     "description": "description for name of the current extension"
   },
+  "sync_delete_panel_title": {
+    "message": "刪除同步的擴充套件",
+    "description": "Panel title text on the delete device overlay"
+  },
   "confirm_delete_extension": {
     "message": "確定要刪除此擴充套件嗎？",
-    "description": "Warning/confirmation message shown when the user clicks on the delete icon for this extension"
+    "description": "Warning/confirmation message shown when the user clicks on the delete icon for a device"
+  },
+  "cannot_be_undone": {
+    "message": "這項動作必須做完。",
+    "description": "Warning/confirmation message shown when the user clicks on the delete icon for a device"
   },
   "delete": {
     "message": "刪除",
