Updated with version: 4.32.1 changes

--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,8 @@
 
 UNRELEASED:
 
+Version: 4.32.1, Date: 2021-04-12
+
 Version: 4.32.0, Date: 2021-04-04
 - Show the /update page to let users know what features have been updated in the last 6 months.
 
